# VLM

./: .gitignore  Dockerfile  NiluLab_Colab.ipynb  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_qwen_cli.py
V_JEPA2/V-JEPA2-ViT-G-fpc32-1B/: README.md  config.json  gitattributes
V_JEPA2/V-JEPA2-ViT-G-fpc64-1B/: README.md  config.json  notebook.ipynb
V_JEPA2/V-JEPA2-ViT-L-fpc16-300M/: README.md  config.json  video_preprocessor_config.json
models/V_JEPA2/V-JEPA2-ViT-G-fpc32-1B/: video_preprocessor_config.json
models/V_JEPA2/V-JEPA2-ViT-G-fpc64-1B/: video_preprocessor_config.json
scripts/: colab_setup.py
tests/: test_server.py  test_smart_detect.py
visionbox/: __init__.py  backend.py  caption.py  data.py  engine.py  model.py  predict.py  server.py  utils.py  vqa.py
visionbox/captioning/: caption.py  caption_cli.py  run_qwen_cli.py
visionbox/classification/: __init__.py  config.py  engine.py  predict.py  predict_cli.py  readme.md  train_cli.py
visionbox/cli/: caption.py  predict.py  train.py
visionbox/smart_detect/: README.md  pipeline.py
visionbox/video_analyzer/: README.md  __init__.py  caption_pipeline.py  embed.py  event_head.py  event_segmenter.py  key_selector.py  latent_change_detector.py  model.py  narration_decoder.py  predict.py  sampler.py
visionbox/vqa/: vqa.py  vqa_cli.py
visionbox/yolo/: __init__.py  predict.py
webapp/: README.md  pom.xml
webapp/src/main/java/com/visionbox/api/: ApiController.java  Application.java  PythonBridge.java
webapp/src/main/resources/: application.properties
webapp/src/main/resources/static/: about.html  caption.html  contact.html  fine-tuning.html  index.html  inference.html  style.css  vqa.html
webapp/src/main/resources/static/css/: about.css  caption.css  contact.css  inference.css  style.css  vqa.css
webapp/src/main/resources/static/html/: about.html  caption.html  contact.html  detect.html  fine-tuning.html  inference.html  sidebar.html  video.html  vqa.html
webapp/src/main/resources/static/js/: common.js  transition.js
webapp/src/main/resources/static/pages/: about.html  caption.html  contact.html  fine-tuning.html  inference.html  style.css  vqa.html
